@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+pts_Graph: Restore support for error bars on vertical bar graph rendering
+
 Phoronix Test Suite 9.4.0 Milestone 3
 18 February 2020
 
